--- a/metal/inventories/prod.yml
+++ b/metal/inventories/prod.yml
@@ -1,15 +1,14 @@
 all:
   vars:
-    control_plane_endpoint: 192.168.1.100
+    control_plane_endpoint: 192.168.3.100
     load_balancer_ip_pool:
-      - 192.168.1.224/27
+      - 192.168.3.224/27
 metal:
   children:
     masters:
       hosts:
-        metal0: {ansible_host: 192.168.1.110, mac: '00:23:24:d1:f5:69', disk: sda, network_interface: eno1}
-        metal1: {ansible_host: 192.168.1.111, mac: '00:23:24:d1:f3:f0', disk: sda, network_interface: eno1}
-        metal2: {ansible_host: 192.168.1.112, mac: '00:23:24:e7:04:60', disk: sda, network_interface: eno1}
+        metal0: {ansible_host: 192.168.3.50, mac: '3c:52:82:01:d1:da', disk: sda, network_interface: eth0}
     workers:
       hosts:
-        metal3: {ansible_host: 192.168.1.113, mac: '00:23:24:d1:f4:d6', disk: sda, network_interface: eno1}
+        metal1: {ansible_host: 192.168.3.51, mac: '40:b0:34:f5:0f:9b', disk: sda, network_interface: eth0}
+        metal2: {ansible_host: 192.168.3.52, mac: '40:b0:34:f5:0f:30', disk: sda, network_interface: eth0}
