--- a/metal/inventories/prod.yml
+++ b/metal/inventories/prod.yml
@@ -7,7 +7,7 @@ metal:
   children:
     masters:
       hosts:
-        metal0: {ansible_host: 192.168.3.50, mac: '3c:52:82:01:d1:da', disk: sda, network_interface: eth0}
+        metal0: {ansible_host: 192.168.3.50, mac: '3c:52:82:01:d2:3c', disk: sda, network_interface: eth0}
     workers:
       hosts:
         metal1: {ansible_host: 192.168.3.51, mac: '40:b0:34:f5:0f:9b', disk: sda, network_interface: eth0}
