--- a/external/Makefile
+++ b/external/Makefile
@@ -2,14 +2,11 @@
 
 default: apply
 
-~/.terraform.d/credentials.tfrc.json:
-	tofu login
-
 terraform.tfvars:
 	cp terraform.tfvars.example ${@}
 	nvim ${@}
 
-.terraform.lock.hcl: ~/.terraform.d/credentials.tfrc.json versions.tf terraform.tfvars
+.terraform.lock.hcl: versions.tf terraform.tfvars
 	tofu init
 	touch ${@}
 
