--- a/platform/woodpecker/values.yaml
+++ b/platform/woodpecker/values.yaml
@@ -7,6 +7,9 @@ woodpecker:
       # Kubernetes backend instead of running them directly on
       # the agent pod, so we can run many workflows per agent.
       WOODPECKER_MAX_WORKFLOWS: 10
+    mapAgentSecret: false
+    extraSecretNamesForEnvFrom:
+      - woodpecker-secret
   server:
     env:
       WOODPECKER_HOST: https://ci.pjak.me
@@ -15,6 +18,9 @@ woodpecker:
       WOODPECKER_GITEA_URL: https://git.pjak.me
       WOODPECKER_OPEN: true
       WOODPECKER_ADMIN: gitea_admin
+    createAgentSecret: false
+    extraSecretNamesForEnvFrom:
+      - woodpecker-secret
     ingress:
       enabled: true
       annotations:
