--- a/apps/actualbudget/values.yaml
+++ b/apps/actualbudget/values.yaml
@@ -18,6 +18,15 @@ app-template:
       className: nginx
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod
+        nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+        
+        # Timeout settings (if large uploads take time)
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+        
+        # Buffer sizes for large requests
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
+        nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
       hosts:
         - host: &host budget.pjak.me
           paths:
