--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -63,42 +63,42 @@ app-template:
               pathType: Prefix
               service:
                 name: main
-                port: http
+                port: 8096
         - host: &transmissionHost transmission.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
-                port: transmission
+                port: 9091
         - host: &prowlarrHost prowlarr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
-                port: prowlarr
+                port: 9696
         - host: &radarrHost radarr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
-                port: radarr
+                port: 7878
         - host: &sonarrHost sonarr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
-                port: sonarr
+                port: 8989
         - host: &jellyseerrHost jellyseerr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: main
-                port: jellyseerr
+                port: 5055
       tls:
         - secretName: jellyfin-tls-certificate
           hosts:
