--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -147,3 +147,18 @@ app-template:
           main:
             - path: /media
               readOnly: false
+          transmission:
+            - path: /media
+              readOnly: false
+          prowlarr:
+            - path: /config
+              subPath: prowlarr/config
+          radarr:
+            - path: /media
+              readOnly: false
+          sonarr:
+            - path: /media
+              readOnly: false
+          jellyseerr:
+            - path: /app/config
+              subPath: jellyseerr/config
