--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -8,28 +8,74 @@ app-template:
       containers:
         main:
           image:
-            repository: docker.io/jellyfin/jellyfin
-            tag: 10.8.13
+            repository: lscr.io/linuxserver/jellyfin
+            tag: 10.10.7
+          probes:
+            liveness:
+              enabled: true
+            readiness:
+              enabled: true
+            startup:
+              enabled: true
+              spec:
+                failureThreshold: 30
+                periodSeconds: 5
+          resources:
+            limits:
+              memory: 1200Mi
+            requests:
+              cpu: 64m
+              memory: 897Mi
         transmission:
           image:
             repository: lscr.io/linuxserver/transmission
-            tag: 4.0.5
+            tag: 4.0.6
+          resources:
+            limits:
+              memory: 177Mi
+            requests:
+              cpu: 2m
+              memory: 10Mi
         prowlarr:
           image:
             repository: lscr.io/linuxserver/prowlarr
-            tag: 1.13.3
+            tag: 2.0.5
+          resources:
+            limits:
+              memory: 186Mi
+            requests:
+              cpu: 2m
+              memory: 101Mi
         radarr:
           image:
             repository: lscr.io/linuxserver/radarr
-            tag: 5.3.6
+            tag: 5.27.5
+          resources:
+            requests:
+              cpu: 2m
+              memory: 104Mi
+            limits:
+              memory: 200Mi
         sonarr:
           image:
             repository: lscr.io/linuxserver/sonarr
-            tag: 4.0.2
+            tag: 4.0.15
+          resources:
+            limits:
+              memory: 254Mi
+            requests:
+              cpu: 2m
+              memory: 187Mi
         jellyseerr:
           image:
             repository: docker.io/fallenbagel/jellyseerr
-            tag: 1.7.0
+            tag: 2.7.3
+          resources:
+            limits:
+              memory: 319Mi
+            requests:
+              memory: 208Mi
+              cpu: 1m
   service:
     main:
       controller: main
@@ -65,43 +111,43 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                name: main
-                port: 8096
+                identifier: main
+                port: http
         - host: &transmissionHost transmission.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
-                name: main
-                port: 9091
+                identifier: main
+                port: http
         - host: &prowlarrHost prowlarr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
-                name: main
-                port: 9696
+                identifier: main
+                port: http
         - host: &radarrHost radarr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
-                name: main
-                port: 7878
+                identifier: main
+                port: http
         - host: &sonarrHost sonarr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
-                name: main
-                port: 8989
+                identifier: main
+                port: http
         - host: &jellyseerrHost jellyseerr.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
-                name: main
-                port: 5055
+                identifier: main
+                port: http
       tls:
         - secretName: jellyfin-tls-certificate
           hosts:
