--- a/apps/jellyfin/templates/ingress-jellyseer.yaml
+++ b/apps/jellyfin/templates/ingress-jellyseer.yaml
@@ -4,7 +4,7 @@ metadata:
   name: jellyseer
   namespace: {{ .Release.Namespace }}
   annotations:
-    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.pjake.me"
+    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.pjak.me"
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
