--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -24,10 +24,10 @@ app-template:
             requests:
               cpu: 64m
               memory: 897Mi
-        transmission:
+        qbitorrent:
           image:
-            repository: lscr.io/linuxserver/transmission
-            tag: 4.0.6
+            repository: lscr.io/linuxserver/qbitorrent
+            tag: 5.1.2
           resources:
             requests:
               cpu: 2m
@@ -80,8 +80,8 @@ app-template:
           port: 8096
           protocol: HTTP
           primary: true
-        transmission:
-          port: 9091
+        qbitorrent:
+          port: 8085
           protocol: HTTP
         prowlarr:
           port: 9696
@@ -112,13 +112,13 @@ app-template:
               service:
                 identifier: main
                 port: http
-        - host: &transmissionHost transmission.pjak.me
+        - host: &qbitorrentHost qbitorrent.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
                 identifier: main
-                port: transmission
+                port: qbitorrent
         - host: &prowlarrHost prowlarr.pjak.me
           paths:
             - path: /
@@ -151,7 +151,7 @@ app-template:
         - secretName: jellyfin-tls-certificate
           hosts:
             - *jellyfinHost
-            - *transmissionHost
+            - *qbitorrentHost
             - *prowlarrHost
             - *radarrHost
             - *sonarrHost
@@ -165,11 +165,11 @@ app-template:
           main:
             - path: /config
               subPath: jellyfin/config
-          transmission:
+          qbitorrent:
             - path: /config
-              subPath: transmission/config
+              subPath: qbitorrent/config
             - path: /downloads
-              subPath: transmission/downloads
+              subPath: qbitorrent/downloads
           prowlarr:
             - path: /config
               subPath: prowlarr/config
@@ -177,12 +177,12 @@ app-template:
             - path: /config
               subPath: radarr/config
             - path: /downloads/complete
-              subPath: transmission/downloads/complete
+              subPath: qbitorrent/downloads/complete
           sonarr:
             - path: /config
               subPath: sonarr/config
             - path: /downloads/complete
-              subPath: transmission/downloads/complete
+              subPath: qbitorrent/downloads/complete
           jellyseerr:
             - path: /app/config
               subPath: jellyseerr/config
@@ -198,7 +198,7 @@ app-template:
           main:
             - path: /data
               readOnly: false
-          transmission:
+          qbitorrent:
             - path: /data
               readOnly: false
           radarr:
