--- a/apps/jellyfin/templates/ingress-jellyfin.yaml
+++ b/apps/jellyfin/templates/ingress-jellyfin.yaml
@@ -14,7 +14,7 @@ spec:
       hosts:
         - jellyfin.pjak.me
   rules:
-    - host: jellyseer.pjak.me
+    - host: jellyfin.pjak.me
       http:
         paths:
           - path: /
