--- a/apps/jellyfin/templates/ingress-jellyfin.yaml
+++ b/apps/jellyfin/templates/ingress-jellyfin.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: jellyfin
+  name: jellyfin-external
   namespace: {{ .Release.Namespace }}
   annotations:
     external-dns.alpha.kubernetes.io/target: "homelab-tunnel.pjak.me"
