--- a/apps/jellyfin/templates/ingress-jellyfin.yaml
+++ b/apps/jellyfin/templates/ingress-jellyfin.yaml
@@ -23,4 +23,4 @@ spec:
               service:
                 name: jellyfin
                 port:
-                  name: main
+                  name: http
