--- a/system/cloudflared/values.yaml
+++ b/system/cloudflared/values.yaml
@@ -30,7 +30,7 @@ app-template:
     config:
       enabled: true
       type: configMap
-      name: cloudflared-config
+      name: cloudflared
       globalMounts:
         - path: /etc/cloudflared/config.yaml
           subPath: config.yaml
