--- a/apps/homepage/values.yaml
+++ b/apps/homepage/values.yaml
@@ -25,7 +25,7 @@ app-template:
               pathType: Prefix
               service:
                 name: main
-                port: http
+                port: 3000
       tls:
         - hosts:
             - *host
