--- a/platform/kanidm/values.yaml
+++ b/platform/kanidm/values.yaml
@@ -52,7 +52,7 @@ app-template:
               pathType: Prefix
               service:
                 name: main
-                port: https
+                port: 443
       tls:
         - hosts:
             - *host
