--- a/apps/tailscale/values.yaml
+++ b/apps/tailscale/values.yaml
@@ -1,6 +1,9 @@
 app-template:
   serviceAccount:
-    name: tailscale
+    tailscale:
+      enabled: true
+      annotations: {}
+      labels: {}
   controllers:
     tailscale:
       containers:
