--- a/platform/kanidm/values.yaml
+++ b/platform/kanidm/values.yaml
@@ -32,6 +32,8 @@ app-template:
       ports:
         http:
           enabled: false
+          port: 80
+          protocol: HTTP
         https:
           port: 443
           protocol: HTTPS
