--- a/platform/kanidm/values.yaml
+++ b/platform/kanidm/values.yaml
@@ -63,7 +63,7 @@ app-template:
     config:
       enabled: true
       type: configMap
-      name: kanidm-config
+      name: kanidm
       globalMounts:
         - path: /data/server.toml
           subPath: server.toml
