--- a/apps/ollama/values.yaml
+++ b/apps/ollama/values.yaml
@@ -39,14 +39,14 @@ app-template:
               pathType: Prefix
               service:
                 name: main
-                port: http
+                port: 11434
         - host: &uiHost ai.pjak.me
           paths:
             - path: /
               pathType: Prefix
               service:
                 name: ui
-                port: http
+                port: 8080
       tls:
         - hosts:
             - *ollamaHost
