--- a/apps/ollama/values.yaml
+++ b/apps/ollama/values.yaml
@@ -16,6 +16,7 @@ app-template:
             OLLAMA_BASE_URL: http://ollama:11434
   service:
     main:
+      controller: main
       ports:
         http:
           port: 11434
