--- a/platform/uptime-kuma/values.yaml
+++ b/platform/uptime-kuma/values.yaml
@@ -3,7 +3,7 @@ uptime-kuma:
     repository: louislam/uptime-kuma
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "1.23.17-debian"
+    tag: "2"
 
   imagePullSecrets: []
   nameOverride: ""
