--- a/platform/kanidm/values.yaml
+++ b/platform/kanidm/values.yaml
@@ -6,7 +6,12 @@ app-template:
         main:
           image:
             repository: docker.io/kanidm/server
-            tag: 1.8.5
+            # IMPORTANT: Kanidm requires incremental upgrades - cannot skip versions!
+            # Current database version: 7 (from Kanidm 1.3)
+            # Required upgrade path: 1.3 → 1.4.0 → 1.5.0 → 1.6.0 → 1.7.0 → 1.8.0 → 1.8.5
+            # After each upgrade, wait for pod to be ready and verify logs show successful upgrade
+            # Use: ./scripts/kanidm-upgrade for guidance
+            tag: 1.4.0  # TODO: Upgrade incrementally through 1.5.0, 1.6.0, 1.7.0, 1.8.0, then 1.8.5
       statefulset:
         volumeClaimTemplates:
           - name: data
