--- a/apps/homepage/values.yaml
+++ b/apps/homepage/values.yaml
@@ -34,7 +34,7 @@ app-template:
     config:
       enabled: true
       type: configMap
-      name: homepage-config
+      name: homepage
       globalMounts:
         - path: /app/config/settings.yaml
           subPath: settings.yaml
