--- a/apps/homepage/values.yaml
+++ b/apps/homepage/values.yaml
@@ -25,7 +25,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                identigier: main
+                identifier: main
                 port: http
       tls:
         - hosts:
