--- a/apps/home-assistant/Chart.yaml
+++ b/apps/home-assistant/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.0.0
 dependencies:
   - name: home-assistant
     version: 0.3.37
-    repository: htts://pajikos.github.io/home-assistant-helm-chart/
+    repository: https://pajikos.github.io/home-assistant-helm-chart/
